fix overflow

--- a/scss/donation.scss
+++ b/scss/donation.scss
@@ -103,11 +103,13 @@
     width: 100%;
     color: #fff;
     font-size: 1rem;
+    font-weight: 500;
     background-color: $primary-color;
     padding: 15px;
     border: none;
     border-radius: 10px;
     margin-top: 35px;
+    cursor: pointer;
 
     @include breakpoint-up(medium) {
       width: 150px;
